bar chart added

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -31,4 +31,10 @@
         android:layout_height="wrap_content"
         android:onClick="animateHorizontalProgressBar"
         android:id="@+id/button3" />
+    <Button
+        android:text="CombinedChartActivity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="combinedChartActivity"
+        android:id="@+id/button4" />
 </LinearLayout>
